--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@types/react-big-calendar": "^1.16.2",
-    "aws-sdk": "^2.1692.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -32,9 +31,10 @@
     "firebase-admin": "^13.4.0",
     "form-data": "^4.0.3",
     "framer-motion": "^11.3.31",
+    "jose": "^6.0.11",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
-    "next": "14.2.7",
+    "next": "15.4.1",
     "next-themes": "^0.4.6",
     "oauth-1.0a": "^2.2.6",
     "randomstring": "^1.3.1",
@@ -53,7 +53,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.7",
+    "eslint-config-next": "15.4.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
